--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="description" content="隐私政策">
 	<title>Ssrconnect 隐私政策</title>
-	<link rel="stylesheet" type="text/css" href="http://ioszen.com/assets/css/main.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 
