--- a/privacy.html
+++ b/privacy.html
@@ -43,7 +43,7 @@
     <footer>
   <div class="container">
     <p class="quote">图难于其易，为大于其细。</p>
-    <p class="copyright">@cyan</p>
+    <p class="copyright">@jin</p>
   </div>
 </footer>
   </body>
