--- a/privacy.html
+++ b/privacy.html
@@ -29,7 +29,7 @@
 <p>虽然 Ssrconnect 需要<strong>您的服务器配置</strong>才能使用，但我们<strong>不会</strong>收集你输入的任何内容，如果没有配置信息,Ssrconnect就是一个<strong>空壳。</strong> </p>
 
 <p>Ssrconnect <strong>不会</strong>将你的数据存储到任何别的地方。除你之外<strong>没有人</strong>知道你在 Ssrconnect 里面存储了什么。</p>
-<p>友情提示:<strong>使用中请遵守中国大陆、服务器所在地及使用者所在地法律</strong> </p>
+<p>友情提示:<strong>使用中请遵守中国大陆、服务器所在地及使用者所在地法律</strong>。 </p>
 <h1 id="技术支持">技术支持</h1>
 
 <p>你可以在电报 at 我们 <strong><a href="https://web.telegram.org/#/im?p=@ssrconnect">@ssrconnect</a></strong>，操作流程也可以看Github <strong><a href="https://github.com/CoderJin/ssrconnect">coderjin</a></strong>。</p>
