--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h2 class="section-heading">Discover what all the buzz is about!</h2>
             <p>Our app is available on mac or ios ! Download now to get started!</p>
             <div class="badges">
-              <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+              <a class="badge-link" href="https://itunes.apple.com/cn/developer/jinwei-wang/id1013405164?mt=8"><img src="img/app-store-badge.svg" alt=""></a>
             </div>
           </div>
         </div>
