--- a/privacy.html
+++ b/privacy.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+       <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="隐私政策">
+	 <link rel="icon" href="favicon.png">
+       <link rel="apple-touch-icon" href="favicon.png">
 	<title>Ssrconnect 隐私政策</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
