--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Ssrconnect">
     <meta name="author" content="">
-
+	  <link rel="icon" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
     <title>Ssrconnect</title>
 
     <!-- Bootstrap core CSS -->
