--- a/ConnectPlus_privacy.html
+++ b/ConnectPlus_privacy.html
@@ -34,7 +34,7 @@
 
       <p>ConnectPlus <strong> will not </strong> Store your data anywhere else. Except you <strong>nobody
       </strong> Know what you store in ConnectPlus. </p>
-      <p>tips:<strong> Please observe the location of the server and the location where the user is located during use.
+      <p>tips:<strong> Please observe the law of the location of the server and the location of the user in use.
       </strong>。 </p>
 <h1 id="技术支持">supply</h1>
 
