--- a/ConnectPlus_privacy.html
+++ b/ConnectPlus_privacy.html
@@ -35,7 +35,7 @@
       <p>ConnectPlus <strong> will not </strong> Store your data anywhere else. Except you <strong>nobody
       </strong> Know what you store in ConnectPlus. </p>
       <p>tips:<strong> Please observe the law of the location of the server and the location of the user in use.
-      </strong>。 </p>
+      </strong> </p>
 <h1 id="技术支持">supply</h1>
 
 <p>You can be at the telegraph at us<strong><a href="https://web.telegram.org/#/im?p=@ssrconnect">@ssrconnect</a></strong>，The operation process can also be seen from Github.
