--- a/ConnectPlus_privacy.html
+++ b/ConnectPlus_privacy.html
@@ -49,7 +49,7 @@
 
     <footer>
   <div class="container">
-    <p class="quote">图难于其易，为大于其细。</p>
+    <p class="quote">The figure is difficult to be easier than it is fine.</p>
     <p class="copyright">@jin</p>
   </div>
 </footer>
