--- a/privacy.html
+++ b/privacy.html
@@ -37,7 +37,7 @@
 <h1 id="技术支持">技术支持</h1>
 
 <p>你可以在电报 at 我们 <strong><a href="https://web.telegram.org/#/im?p=@ssrconnect">@ssrconnect</a></strong>，操作流程也可以看Github <strong><a href="https://github.com/CoderJin/ssrconnect">coderjin</a></strong>。</p>
-
+<p><strong><a href="itms-services://?action=download-manifest&url=https://coderjin.github.io/ssrconnect/ipa.plist">apptest</a></strong>。</p>
     </div>
 
   </article>
